examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia3
  labels:
    app: kubia3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubia3
  template:
    metadata:
      labels:
        app: kubia3
    spec:
      containers:
      - name: kubia3
        image: amisovic/kubia:23
        ports:
        - containerPort: 8080
