examples/IngressArgoCD.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
  name: argocd-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /argocd
        pathType: Prefix
